$Id$
Version 1.1.3+CVS (?? ??? 2006)
 - Fix bug [ 1744662 ] German translation
 - Fix bug [ 1743401 ] code error for view type=day
 - Applied PATCH [ 1726402 ] Fix for send_reminder.php
 - Fix bug [ 1718609 ] Cannot login after upgrading/updating
 - Fix bug [ 1719102 ] Including header/trailer file also includes its file name
 - Changed iCalendar output (export, publish) for all-day and untimed events.
 - Fixed bug [ 1714785 ] new feature "plugins" not being displayed correctly at system settings
 - Fixed bug [ 1711983 ] cannot switch between registers of system settings
 - Fixed bug [ 1714844 ] Small patch for includes/styles.php + includes/js/popups.php
 - Applied PATCH [ 1710686 ] Version 1.0.5 uses javascript functions undefined in IE6
 - Applied PATCH [1060051 ] Add hover effect for week number links
 - Applied PATCH [ 1659949 ] MyCalendar Link not including .php suffix
 - Applied PATCH [ 1669552 ] Themes are not all listed in drop-down
 - Applied PATCH [ 1697119 ] popups.php - fix for IE popups falling of screen.
 - Instead of 'removing' translations identical to English, replace them with
   an equal sign "=".  Cuts down on <<MISSING>> by update_translation.pl and
   still saves a lot of file space.
 - Fully populate translations[] with default English text
   before loading other language files.
 - Begin support for new language - JRR Tolkien's "Elven". :)
   See the comment notes in the file for where to get the fonts.
 - Removed several more phrases from translations/*.txt files that are the same
   in English.  Between these last two 'removals', overall file size is 100+K smaller.
 - Removed "ob_start()" from help_docs.php so it would output.
   Removed several phrases from translations/*.txt files that are the same in
   English - cutting overall file size considerably.
 - Fixed bug [ 1663286 ] pop-up window of categories are not dynamic
 - Fixed bug [ 1663292 ] date-pop-up --> mini calendar should be increased the size