@@ -1,5 +1,6 @@
 $Id$
 Version 1.1.3+CVS (?? ??? 2006)
+ - Fix bug [ 1744648 ] Theme changing over system settings
  - Fix bug [ 1744662 ] German translation
  - Fix bug [ 1743401 ] code error for view type=day
  - Applied PATCH [ 1726402 ] Fix for send_reminder.php
